# bevy-nature-of-code

./: .gitignore  Cargo.toml  LICENSE  README.ipynb  README.md
assets/models/: cone.blend  cone.blend1  cone.glb  cone_blue.blend  cone_blue.blend1  cone_blue.glb  cone_pink.blend  cone_pink.glb  fighter_blue.glb  fighter_pink.glb  ship.glb
img/: chapter1.mov  chapter6minimal.mov
src/: five.rs  five_group.rs  five_space.rs  five_spaceb.rs  four.rs  mesh.rs  one.rs  orbitcamera.rs  six.rs  six_forces.rs  six_minimal.rs  skybox.rs  three.rs  two.rs
