[package]
name = "rust-bevy-nature-of-code"
version = "0.15.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.3"
bevy_egui = "0.33.0"
bevy_rapier3d = { version = "0.29.0", features = [ "debug-render" ] }
rand = "0.9"

#cargo run --example hello_world
[[example]]
name = "one"
path = "src/one.rs"

[[example]]
name = "two"
path = "src/two.rs"

[[example]]
name = "three"
path = "src/three.rs"

[[example]]
name = "four"
path = "src/four.rs"

[[example]]
name = "five"
path = "src/five.rs"

[[example]]
name = "five_group"
path = "src/five_group.rs"

[[example]]
name = "five_space"
path = "src/five_space.rs"

[[example]]
name = "five_spaceb"
path = "src/five_spaceb.rs"

[[example]]
name = "six_minimal"
path = "src/six_minimal.rs"

[[example]]
name = "six"
path = "src/six.rs"

[[example]]
name = "six_forces"
path = "src/six_forces.rs"